--- a/lambdatimes/src/CSS/index.css
+++ b/lambdatimes/src/CSS/index.css
@@ -62,7 +62,7 @@ body {
   height: 44px;
   background-color: #333;
 } */
-.top-bar .container {
+/* .top-bar .container {
   width: 100%;
   display: flex;
   justify-content: none;
@@ -76,8 +76,8 @@ body {
   .top-bar .container {
     width: 1280px;
   }
-}
-.top-bar .container .container-left {
+} */
+/* .top-bar .container .container-left {
   display: flex;
   justify-content: none;
   align-items: center;
@@ -89,8 +89,8 @@ body {
   cursor: pointer;
   margin-right: 25%;
   font-weight: bold;
-}
-.top-bar .container .container-center {
+} */
+/* .top-bar .container .container-center {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -107,8 +107,8 @@ body {
 }
 .top-bar .container .container-center span:hover {
   text-decoration: underline;
-}
-.top-bar .container .container-right {
+} */
+/* .top-bar .container .container-right {
   display: flex;
   justify-content: flex-end;
   align-items: center;
@@ -119,7 +119,7 @@ body {
 }
 .top-bar .container .container-right span {
   cursor: pointer;
-}
+} */
 .header {
   display: flex;
   justify-content: space-between;
